[tool.poetry]
name = "dagster-tuto"
version = "0.1.0"
description = ""
authors = ["Alexey Zidymakov <alexey.zidymakov.ext@ipsen.com>"]
readme = "README.md"
packages = [{include = "dagster_tuto"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.3.5"
requests = "^2.30.0"
matplotlib = "^3.7.1"
dagster-duckdb = "^0.19.5"
dagster-duckdb-pandas = "^0.19.5"


[tool.poetry.group.dev.dependencies]
dagit = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
